--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -2,12 +2,53 @@
   Movie #<%= @the_movie.id %> details
 </h1>
 
+<div>
+  <a href="/movies">
+    Go back
+  </a>
+</div>
 
-<a href="/movies">
-  Go back
-</a>
+<div>
+  <a href="/delete_movie/<%= @the_movie.id %>">Delete movie</a>
+</div>
 
-<a>
+<hr>
+
+<form action="update_movie_record" method="post">
+  <div>
+    <label for="title_field">Title</label>
+    <input id="title_field" type="text" name="the_title">
+  </div>
+
+  <div>
+    <label for="year_field">Year</label>
+    <input id="year_field" type="text" name="the_year">
+  </div>
+
+  <div>
+    <label for="duration_field">Duration</label>
+    <input id="duration_field" type="text" name="the_duration">
+  </div>
+
+  <div>
+    <label for="description_field">Description</label>
+    <input id="description_field" type="text" name="the_description">
+  </div>
+
+  <div>
+    <label for="image_field">Image</label>
+    <input id="image_field" type="text" name="the_image">
+  </div>
+
+  <div>
+    <label for="director_id_field">Director ID</label>
+    <input id="director_id_field" type="text" name="the_director_id">
+  </div>
+
+  <button>
+    Update movie
+  </button>   
+</form>
 
 <hr>
 
@@ -46,7 +87,7 @@
   <dd>
     <img src="<%= @the_movie.image %>" style="width:250px;">
   </dd>
-
+  
   <dt>
     Director
   </dt>
@@ -57,7 +98,11 @@
     
     <% the_director = matching_directors.at(0) %>
 
-    <%= the_director.name %>
+      <% if the_director == nil %>
+        Uh oh! We can't find a director for this movie.
+      <% else %>
+        <%= the_director.name %>
+      <% end %>
   </dd>
 
   <dt>
