adds update movie to show movie details page

--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -14,7 +14,7 @@
 
 <hr>
 
-<form action="update_movie_record" method="post">
+<form action="/modify_movie_record/<%= @the_movie.id %>" method="post">
   <div>
     <label for="title_field">Title</label>
     <input id="title_field" type="text" name="the_title">
